--- a/index.html
+++ b/index.html
@@ -4,20 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-            // Simple detection for mobile devices
-            const isMobile = /android|iphone|ipad|ipod|blackberry|windows phone/i.test(userAgent);
-
-            if (isMobile) {
-                window.location.replace('mobile.html'); // Redirect to mobile version
-            } else {
-                window.location.replace('desktop.html'); // Redirect to desktop version
-            }
-        });
-    </script>
     <style>
         body {
             display: flex;
@@ -28,10 +14,70 @@
             background-color: #1a1a2e; /* Matches your previous background */
             color: #ffffff;
             font-family: 'Inter', sans-serif;
+            font-size: 1.2em;
+        }
+
+        /* Basic loading spinner */
+        .spinner {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-top: 4px solid #00ccff; /* A color from your theme */
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin-right: 15px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .loading-content {
+            display: flex;
+            align-items: center;
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            let isMobileDevice = false;
+
+            // 1. Check for common mobile OS/browser keywords in User Agent
+            if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|rim)|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(userAgent) ||
+                /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|ri)|ap(ap|ti)|aq(e|od)|as(te|us)|attw|au(di|\-m|r |s )|ay(ch|er|l\-)|bb(tk|url)|bd(ac|ad)|be(on|ui)|bi(lb|rd)|bl(ac|ok)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\- |cell|chtm|cldc|cmd\- |co(mp|nd)|craw|da(is|eo)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|ad|lg|lx)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|pn|to|wz)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|ad|vl|lk)|sfod|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|65)|t\-mo|tdg\-|tel(i|m)|tim\-|t\-wap|tcl\-|tdel|te(sl|sy)|tfwa|tg(wt|lk)|ti\-ap|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(userAgent.substr(0, 4))) {
+                isMobileDevice = true;
+            }
+
+            // 2. Check for touch capabilities (strong indicator for modern mobile/tablet)
+            // This is generally more reliable than user agent for modern devices.
+            if ('ontouchstart' in window || navigator.maxTouchPoints > 0 || navigator.msMaxTouchPoints > 0) {
+                // If it has touch points AND it's not a large screen likely to be a desktop touchscreen
+                // We assume if it has touch and is not explicitly a large desktop-like screen, it's mobile-first.
+                // This is a heuristic, adjust width threshold if needed.
+                if (window.innerWidth <= 1024 || window.innerHeight <= 768) { // Common tablet/small laptop breakpoint
+                    isMobileDevice = true;
+                }
+            }
+
+            // 3. Specific checks for common tablets that might have desktop-like user agents
+            if (/ipad|tablet|android(?!.*mobile)/i.test(userAgent)) {
+                isMobileDevice = true;
+            }
+
+            // Redirect based on detection
+            if (isMobileDevice) {
+                window.location.replace('mobile.html');
+            } else {
+                window.location.replace('index.html'); // Assuming index.html is your desktop version
+            }
+        });
+    </script>
 </head>
 <body>
-    <p>Loading the best experience for your.</p>
+    <div class="loading-content">
+        <div class="spinner"></div>
+        <p>Loading the best experience for you...</p>
+    </div>
 </body>
 </html>
