fianl fix laoding

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             if (isMobileDevice) {
                 window.location.replace('mobile.html');
             } else {
-                window.location.replace('index.html'); // Assuming index.html is your desktop version
+                window.location.replace('desktop.html'); // Assuming index.html is your desktop version
             }
         });
     </script>
